# task2

./: .gitignore  CMakeLists.txt  README.md  in.txt
cmake/: CMakeLists.txt  Testing.cmake
lib/: CMakeLists.txt
lib/include/: hexdump.h
lib/src/: format.c  format.h  hexconv.c  hexconv.h  hexdump.c  reader.c  reader.h  render.c  render.h
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/hexdump_tests/: test_hexconv.c  test_reader.c  test_reader.h  test_render.c  test_render.h
